<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".RoleActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamilton" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rolesTextView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

    <Button
        android:id="@+id/actOneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/act_one"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@id/rolesTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/actTwoButton"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/actTwoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/act_two"
        android:layout_marginTop="180dp"

        app:layout_constraintTop_toBottomOf="@id/rolesTextView"
        app:layout_constraintStart_toEndOf="@id/actOneButton"
        app:layout_constraintEnd_toStartOf="@id/logoutButton"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@id/rolesTextView"
        app:layout_constraintStart_toEndOf="@id/actTwoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
