<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/broadway_image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="601dp"
        android:background="@drawable/broad"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="140dp"
        android:textSize="20dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:text="@string/user_prompt_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/broadway_image" />

    <EditText
        android:id="@+id/user_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/username_prompt"
        tools:layout_editor_absoluteX="100dp" />

    <TextView
        android:id="@+id/pass_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/passphrase"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_edit" />

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/pass_prompt"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/log_button"
        android:layout_width="113dp"
        android:layout_height="65dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_edit"
        android:text="@string/login"
        android:textColor="@color/black"
    />


</androidx.constraintlayout.widget.ConstraintLayout>
